--- a/about-us.html
+++ b/about-us.html
@@ -98,12 +98,11 @@
 </div>
 
 <div class="navigation">
-    <a href="index.html"></a>
+    <a href="index.html">Home</a>
     <a href="about-us.html">About Us</a>
     <a href="service.html">Services</a>
     <a href="portfolio.html">Portfolio</a>
 </div>
-
 
 <div class="content-section">
     <!-- Row 1 -->
