--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 </div>
 
 <div class="navigation">
+    <a href="index.html">Home</a>
     <a href="about-us.html">About Us</a>
     <a href="service.html">Services</a>
     <a href="portfolio.html">Portfolio</a>
