--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
 </div>
 
 <div class="navigation">
-    <a href="index.html"></a>
+    <a href="index.html">Home</a>
     <a href="about-us.html">About Us</a>
     <a href="service.html">Services</a>
     <a href="portfolio.html">Portfolio</a>
