Added About Us Picture and Others

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Furniture Website</title>
+    <title>Home - STAGI</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300&display=swap" rel="stylesheet">
     <style>
         body, html {
@@ -73,7 +73,7 @@
         }
 
         .navigation a:hover {
-            color: dodgerblue;
+            color: rgb(0, 0, 0);
         }
 
         /* Increase gap for video background visibility */
@@ -174,15 +174,15 @@
 </div>
 
 <div class="title-section">
-    <h1>STAG-AI</h1>
+    <h1>STAGI</h1>
     <div class="sub-title">- Seattle -</div>
 </div>
 
 <div class="navigation">
     <a href="index.html">Home</a>
-    <a href="about-us.html">About Us</a>
-    <a href="service.html">Services</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="service.html">Services</a>
+    <a href="about-us.html">About Us</a>
 </div>
 
 <div class="gap"></div> <!-- Increased gap to showcase video background -->
@@ -198,7 +198,6 @@
         <input type="email" placeholder="Enter your email" id="emailInput">
         <button id="submitEmail" type="button">Submit</button>
     </form>
-    <p>@STAG-AI 2024</p>
 </div>
 
 <script>
