--- a/portfolio.html
+++ b/portfolio.html
@@ -11,17 +11,56 @@
             padding: 0;
             font-family: 'Roboto Slab', serif;
             overflow: auto;
+            height: 100%;
         }
 
-        .title-section, .navigation, .content-section, .bottom-section {
+        .video-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -100;
+        }
+
+        video {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            -webkit-filter: blur(8px);
+            filter: blur(8px);
+        }
+
+        .title-section {
+            background-color: white;
+            color: black;
+            padding: 5px 0;
             text-align: center;
-            padding: 20px;
-            background-color: #f3f1ed;
+            position: relative;
+            z-index: 1;
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .sub-title {
+            text-align: center;
+            font-size: 20px;
+            color: #666;
+            margin-top: 10px;
+        }
+
+        .title-section h1, .sub-title {
+            margin: 0; /* Removes margin from title and subtitle */
+            padding: 0; /* Ensures no padding is adding extra space */
         }
 
         .navigation {
-            background-color: #ddd;
-            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            background-color: #f3f1ed;
+            padding: 10px 0;
+            position: relative;
+            z-index: 2;
         }
 
         .navigation a {
@@ -34,13 +73,35 @@
         }
 
         .navigation a:hover {
-            color: dodgerblue;
+            color: rgb(0, 0, 0);
+        }
+
+        .content-section {
+            text-align: center;
+            padding: 20px;
+            position: relative;
+            z-index: 1; /* Higher z-index to be on top of the video background */
+            /* Removed background-color */
         }
 
         .content-section-title {
             margin-bottom: 20px;
-            font-size: 24px;
-            color: #333;
+            font-size: 30px;
+            color: #ffffff;
+            font-weight: bolder;
+        }
+
+        .content-section {
+            color: white;
+            font-size: 20px;
+            padding: 20px;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+            margin-top: 80px;
+            margin-bottom: 80px; /* Increased margin to lower the content section */
+            font-weight: bold;
+            font-stretch: narrower;
         }
 
         .images-row {
@@ -66,7 +127,8 @@
 
         .image-description {
             margin-top: 10px;
-            font-size: 16px;
+            font-size: 20px;
+            color: #fff; /* Change text color for visibility */
         }
 
         .start-now-button {
@@ -83,9 +145,43 @@
         .start-now-button:hover {
             background-color: darkblue;
         }
+
+        .bottom-section {
+            background-color: rgba(128, 128, 128, 0.5);
+            color: white;
+            padding: 20px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        input[type=email], button {
+            padding: 10px;
+            display: inline-block;
+        }
+
+        input[type=email] {
+            margin-right: 10px;
+        }
+
+        button {
+            cursor: pointer;
+            background-color: dodgerblue;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+        }
     </style>
 </head>
 <body>
+
+<div class="video-background">
+    <video autoplay loop muted playsinline>
+        <source src="room.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
 
 <div class="title-section">
     <h1>Portfolio</h1>
@@ -93,13 +189,13 @@
 
 <div class="navigation">
     <a href="index.html">Home</a>
-    <a href="about-us.html">About Us</a>
-    <a href="service.html">Services</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="service.html">Services</a>
+    <a href="about-us.html">About Us</a>
 </div>
 
 <div class="content-section">
-    <div class="content-section-title">Our Recent Work</div>
+    <div class="content-section-title">Bringing The Power of AI to Your Property</div>
     <div class="images-row">
         <div class="image-container">
             <img src="empty-room.jpg" alt="Project 1">
@@ -108,12 +204,12 @@
             <img src="room2.jpg" alt="Project 2">
         </div>
     </div>
-    <div class="image-description">Here is a description of our projects. We focus on delivering quality and innovation.</div>
-    <a href="/services" class="start-now-button">Start Now</a>
+    <div class="image-description">Unlock the true value of your property. Let us take a journey through the art of House Staging with AI.</div>
+    <a href="service.html" class="start-now-button">Start Now</a>
 </div>
 
 <div class="bottom-section">
-    © 2023 Modern Furniture Website
+    © 2024 StaGi
 </div>
 
 </body>
