--- a/service.html
+++ b/service.html
@@ -11,17 +11,37 @@
             padding: 0;
             font-family: 'Roboto Slab', serif;
             overflow: auto;
-        }
-
-        .title-section, .navigation, .content-section, .bottom-section {
-            text-align: center;
-            padding: 20px;
             background-color: #f3f1ed;
         }
 
+        .title-section {
+            background-color: white;
+            color: black;
+            padding: 5px 0;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        
+        .sub-title {
+            text-align: center;
+            font-size: 20px;
+            color: #666;
+            margin-top: 10px;
+        }
+
+        .title-section h1, .sub-title {
+            margin: 0; /* Removes margin from title and subtitle */
+            padding: 0; /* Ensures no padding is adding extra space */
+        }
+
         .navigation {
+            display: flex;
+            justify-content: center;
             background-color: #ddd;
-            margin-bottom: 20px;
+            padding: 10px 0;
         }
 
         .navigation a {
@@ -34,7 +54,7 @@
         }
 
         .navigation a:hover {
-            color: dodgerblue;
+            color: rgb(0, 0, 0);
         }
 
         .service-form {
@@ -63,6 +83,21 @@
         .service-form button:hover {
             background-color: darkblue;
         }
+
+        .bottom-section {
+            background-color: rgba(128, 128, 128, 0.5);
+            color: white;
+            padding: 20px;
+            text-align: center; /* This centers text for non-flexbox containers */
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            justify-content: center; /* This will center all flex items */
+            align-items: center;
+            z-index: 1;
+        }
+
     </style>
 </head>
 <body>
@@ -73,9 +108,9 @@
 
 <div class="navigation">
     <a href="index.html">Home</a>
-    <a href="about-us.html">About Us</a>
-    <a href="service.html">Services</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="service.html">Services</a>
+    <a href="about-us.html">About Us</a>
 </div>
 
 
@@ -92,7 +127,7 @@
 </div>
 
 <div class="bottom-section">
-    © 2023 Modern Furniture Website
+    © 2024 StaGi
 </div>
 
 </body>
