--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         .title-section {
-            background-color: white;
+            background-color: rgb(212, 212, 212);
             color: black;
             padding: 5px 0;
             text-align: center;
@@ -174,14 +174,15 @@
 </div>
 
 <div class="title-section">
-    <h1>STAGI</h1>
+    <img src="logo 2.png" alt="Logo" style="max-width: 120px; margin-bottom: 10px;"> <!-- Adjust max-width as needed -->
     <div class="sub-title">- Seattle -</div>
 </div>
 
 <div class="navigation">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <a href="service.html">Services</a>
+    <a href="http://127.0.0.1:7860/" target ="blank">Services</a>
+    <!-- <a href="service.html">Services</a> -->
     <a href="about-us.html">About Us</a>
 </div>
 
@@ -189,7 +190,7 @@
 
 <div class="content-section">
     <p>DESIGN YOUR HOUSE WITH AI</p>
-    <div class="underline-animation"></div> <button onclick="window.location.href='service.html'">Start Here</button> 
+    <div class="underline-animation"></div> <button onclick="window.location.href='http://127.0.0.1:7860/'">Start Here</button> 
 </div>
 
 <div class="bottom-section">
