--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,24 @@
             height: 100%;
         }
 
+        .image-set {
+            display: none; /* Hide all image sets initially */
+        }
+
+        .image-set.active {
+            display: flex; /* Only display the active set */
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 30px; /* Adjust based on your layout */
+        }
+
+        .arrow {
+            cursor: pointer;
+            font-size: 24px;
+            user-select: none;
+            padding: 10px;
+        }
+
         .video-background {
             position: fixed;
             top: 0;
@@ -32,7 +50,7 @@
         }
 
         .title-section {
-            background-color: white;
+            background-color: rgb(212, 212, 212);
             color: black;
             padding: 5px 0;
             text-align: center;
@@ -184,29 +202,79 @@
 </div>
 
 <div class="title-section">
-    <h1>Portfolio</h1>
+    <img src="logo 2.png" alt="Logo" style="max-width: 120px; margin-bottom: 10px;"> <!-- Adjust max-width as needed -->
+    <div class="sub-title">- Portfolio -</div>
 </div>
 
 <div class="navigation">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <a href="service.html">Services</a>
+    <a href="http://127.0.0.1:7860/" target ="blank">Services</a>
+    <!-- <a href="service.html">Services</a> -->
     <a href="about-us.html">About Us</a>
 </div>
 
 <div class="content-section">
     <div class="content-section-title">Bringing The Power of AI to Your Property</div>
-    <div class="images-row">
+    
+    <!-- First image set -->
+    <div class="image-set active">
         <div class="image-container">
-            <img src="empty-room.jpg" alt="Project 1">
+            <span>Before</span>
+            <img src="empty-room.jpg" alt="Before Image 1">
         </div>
         <div class="image-container">
-            <img src="room2.jpg" alt="Project 2">
+            <span>After</span>
+            <img src="euro.png" alt="After Image 1">
         </div>
     </div>
-    <div class="image-description">Unlock the true value of your property. Let us take a journey through the art of House Staging with AI.</div>
-    <a href="service.html" class="start-now-button">Start Now</a>
+
+    <!-- Second image set -->
+    <div class="image-set">
+        <div class="image-container">
+            <span>Before</span>
+            <img src="empty-room.jpg" alt="Before Image 2">
+        </div>
+        <div class="image-container">
+            <span>After</span>
+            <img src="rustic.png" alt="After Image 2">
+        </div>
+    </div>
+
+    <!-- Second image set -->
+    <div class="image-set">
+        <div class="image-container">
+            <span>Before</span>
+            <img src="empty-room3.png" alt="Before Image 2">
+        </div>
+        <div class="image-container">
+            <span>After</span>
+            <img src="scan.png" alt="After Image 2">
+        </div>
+    </div>
+
+    <!-- Navigation arrows -->
+    <div class="navigation-arrows">
+        <span class="arrow" onclick="navigate(-1)">&#10094;</span> <!-- Left arrow -->
+        <span class="arrow" onclick="navigate(1)">&#10095;</span> <!-- Right arrow -->
+    </div>
 </div>
+
+<script>
+    let currentSet = 0; // Index of the currently displayed image set
+    const imageSets = document.querySelectorAll('.image-set');
+
+    function navigate(direction) {
+        imageSets[currentSet].classList.remove('active'); // Hide current set
+        currentSet += direction; // Calculate next set index
+
+        // Loop around if out of bounds
+        if (currentSet >= imageSets.length) currentSet = 0;
+        if (currentSet < 0) currentSet = imageSets.length - 1;
+
+        imageSets[currentSet].classList.add('active'); // Show new set
+    }
+</script>
 
 <div class="bottom-section">
     © 2024 StaGi
