--- a/service.html
+++ b/service.html
@@ -15,7 +15,7 @@
         }
 
         .title-section {
-            background-color: white;
+            background-color: rgb(212, 212, 212);
             color: black;
             padding: 5px 0;
             text-align: center;
@@ -102,17 +102,18 @@
 </head>
 <body>
 
-<div class="title-section">
-    <h1>Service</h1>
-</div>
+    <div class="title-section">
+        <img src="logo 2.png" alt="Logo" style="max-width: 120px; margin-bottom: 10px;"> <!-- Adjust max-width as needed -->
+        <div class="sub-title">- Service -</div>
+    </div>
 
-<div class="navigation">
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="service.html">Services</a>
-    <a href="about-us.html">About Us</a>
-</div>
-
+    <div class="navigation">
+        <a href="index.html">Home</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="http://127.0.0.1:7860/" target ="blank">Services</a>
+        <!-- <a href="service.html">Services</a> -->
+        <a href="about-us.html">About Us</a>
+    </div>
 
 <div class="content-section">
     <form class="service-form" action="your_server_endpoint" method="post" enctype="multipart/form-data">
